# CODE_MIGRATION_V1_BE

./: .gitignore  error_log.txt  main.py  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: analysis.py  auth.py  ingest.py
app/core/: config.py  database.py  security.py
app/schemas/: auth.py
app/services/: analysis_service.py  clone_service.py  email_service.py
scratch/: strip_emojis.py
skills/: agent_protocols.skill.md  python_fastapi.skill.md  quick_migration.skill.md
