[project]
name = "code-migration-v1-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "gitpython>=3.1.46",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pymongo[srv]>=4.16.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
